--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron">
+  <h1>Bienvenido a estuk -.-</h1>
+  <p>venta de libros</p>
+  <%= link_to 'Books', '#', class: 'btn btn-primary btn-block' %>
+  <%= link_to 'Registro', new_user_registration_path, class: 'btn btn-primary btn-block' %>
+</div>
