--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
+<div class="container">
 <div class="jumbotron">
-  <h1>Bienvenido a estuk -.-</h1>
+  <h1 class="text-center">Bienvenido a ebooks -.-</h1>
   <p>venta de libros</p>
   <%= link_to 'Books', '#', class: 'btn btn-primary btn-block' %>
   <%= link_to 'Registro', new_user_registration_path, class: 'btn btn-primary btn-block' %>
+</div>
 </div>
