se agrego modelo de libros

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
       
       <ul class="nav navbar-nav navbar-right">
 	<li>
-	<%= link_to 'Libros', '#' %>
+	<%= link_to 'Libros', books_path %>
 	</li>
 
 	<% if current_user %>
