--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="jumbotron">
   <h1 class="text-center">Bienvenido a ebooks -.-</h1>
   <p>venta de libros</p>
-  <%= link_to 'Books', '#', class: 'btn btn-primary btn-block' %>
+  <%= link_to 'Books', books_path, class: 'btn btn-primary btn-block' %>
   <%= link_to 'Registro', new_user_registration_path, class: 'btn btn-primary btn-block' %>
 </div>
 </div>
