--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,16 @@
 <body>
 
 <%= render 'layouts/header' %>
+<div class="container">
+	<% flash.each do |type, message| %>
+		<div class="alert alert-info fade-in">
+			<button class="close" data-dismiss="alert">x</button>
+			<%= message %>
+		</div>
+		<% end %>
+	<%= yield %>
+</div>
 
-<%= yield %>
 
 </body>
 </html>
