--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,7 +8,7 @@
     <h3><%= @book.name %> by <%= @book.author %></h3>
     <p><%= @book.description %></p>
     <h4 class="text-center">$<%= @book.price.to_f / 100 %></h4>
-
+    <%= if current_user %>
     <%= form_tag buy_path(slug: @book.slug) do %>
 	    <script
 		src="https://checkout.stripe.com/checkout.js" class="stripe-button"
@@ -19,6 +19,7 @@
 		data-email="<%= current_user.email %>"
 		>
 	    </script>
+    <% end %>
     <% end %>
  </div>
 </div>
